# cloc-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  total.md
.github/workflows/: rust.yml
src/: calculate.rs  calculator.rs  config.rs  detail.rs  engine.rs  error.rs  executor.rs  explorer.rs  lib.rs  machine.rs  macros.rs  main.rs  message.rs  options.rs  pprint.rs  pretty_printer.rs  prettyprinter.rs  reporter.rs  spinner.rs  util.rs
tests/: test_basic.rs
tests/code/: rust.rs
