[package]
name = "cloc"
version = "0.2.0"
authors = ["ltoddy <taoliu0509@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["cloc"]
description = "Count, or compute differences of, lines of source code and comments."
repository = "https://github.com/ltoddy/cloc-rs"

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/bin/cloc.rs"
name = "cloc"

[dependencies]
structopt = "0.3"
num_cpus = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
